--- a/TowerSite/TowerSite/Views/Home/Index.cshtml
+++ b/TowerSite/TowerSite/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="jumbotron">
     <h1>Tower Offense</h1>
     <p class="lead">Tower Offense is a fast paced action game developed by students at the University of Minnesota</p>
-    <p><a href="@Url.Action("About", "Home")" class="btn btn-primary btn-large">Start playing &raquo;</a></p>
+    <p><a href="@Url.Action("Index", "Download")" class="btn btn-primary btn-large">Start playing &raquo;</a></p>
 </div>
 <!--
 <div class="row">
