--- a/TowerSite/TowerSite/Views/Download/Index.cshtml
+++ b/TowerSite/TowerSite/Views/Download/Index.cshtml
@@ -4,5 +4,5 @@
 }
 
 <h2>Tower Offense Downloads</h2><br />
-<h3>Version 0.1.0 - 3/6/14</h3>
-<p><a href="https://portalvhdspqj9kzn4lqvlp.blob.core.windows.net/game/TowerOffense.zip" target="_blank" class="btn btn-primary btn-large">Download</a></p>
+<h3>Version 0.2.0 - 3/8/14</h3>
+<p><a href="https://portalvhdspqj9kzn4lqvlp.blob.core.windows.net/game/TowerOffense-0.2.0.zip" target="_blank" class="btn btn-primary btn-large">Download</a></p>
