--- a/TowerSite/TowerSite/Views/Shared/_Layout.cshtml
+++ b/TowerSite/TowerSite/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Tower Offense</title>
+    <title>@ViewBag.Title - CSCI 4950 Project</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -17,7 +17,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Tower Offense", "Index", "Home", null, new { @class = "navbar-brand" })
+                @Html.ActionLink("CSCI 4950 Project", "Index", "Home", null, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -33,7 +33,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Tower Offense</p>
+            <p>&copy; @DateTime.Now.Year - CSCI 4950 Project</p>
         </footer>
     </div>
 
