--- a/TowerSite/TowerSite/Views/Download/Index.cshtml
+++ b/TowerSite/TowerSite/Views/Download/Index.cshtml
@@ -4,5 +4,5 @@
 }
 
 <h2>CSCI 4950 Project Downloads</h2><br />
-<h3>Version 0.2.1 - 3/10/14</h3>
-<p><a href="https://portalvhdspqj9kzn4lqvlp.blob.core.windows.net/game/TowerOffense-0.2.1.zip" target="_blank" class="btn btn-primary btn-large">Download</a></p>
+<h3>Version 0.2.2 - 3/10/14</h3>
+<p><a href="https://portalvhdspqj9kzn4lqvlp.blob.core.windows.net/game/4950-Project-0.2.2.zip" target="_blank" class="btn btn-primary btn-large">Download</a></p>
