Installer and site updates

--- a/TowerSite/TowerSite/Views/Home/About.cshtml
+++ b/TowerSite/TowerSite/Views/Home/About.cshtml
@@ -4,4 +4,14 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>CSCI 4950 started with a simple idea:</p>
+
+<p>"What if games fit the player, rather than players fitting into the game?"</p>
+
+<p>Games should be fun. However, many games fall into one of two traps. Some games are too easy, and get boring quickly. Others are too hard, and are frustrating until you just turn them off. The narrow band between easy and hard is challenging, engaging, and where the fun lives. The challenge is finding that narrow band: It's different for everyone, and it moves as you become a better player.</p>
+
+<p>Enter our team: 12 intrepid developers, designers, and managers, led by Professor Baylor Wetzel. Together, we've constructed the game you're about to play, in order to study the tricks, techniques, and data to build our dream: the game that grows with you.</p>
+
+<p>Before we go, our most sincere thanks for checking out the project, and contributing your play-time. We couldn't do this without you. Don't stop being awesome.</p>
+
+<p>~CSCI 4950</p>
