--- a/TowerSite/TowerSite/Views/Shared/_Layout.cshtml
+++ b/TowerSite/TowerSite/Views/Shared/_Layout.cshtml
@@ -23,6 +23,8 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
+                    <li>@Html.ActionLink("Download", "Index", "Download")</li>
+                    <li>@Html.ActionLink("Leaderboard", "Index", "Leaderboard")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
