--- a/TowerSite/TowerSite/Views/Home/About.cshtml
+++ b/TowerSite/TowerSite/Views/Home/About.cshtml
@@ -4,7 +4,7 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>CSCI 4950 started with a simple idea:</p>
+<p>Tower Offense started with a simple idea:</p>
 
 <p>"What if games fit the player, rather than players fitting into the game?"</p>
 
