--- a/TowerSite/TowerSite/Views/Home/Index.cshtml
+++ b/TowerSite/TowerSite/Views/Home/Index.cshtml
@@ -3,8 +3,8 @@
 }
 
 <div class="jumbotron">
-    <h1>CSCI 4950 Project</h1>
-    <p class="lead">CSCI 4950 Project is a fast paced action game developed by students at the University of Minnesota</p>
+    <h1>Tower Offense</h1>
+    <p class="lead">Tower Offense is a fast paced action game developed by students at the University of Minnesota</p>
     <p><a href="@Url.Action("Index", "Download")" class="btn btn-primary btn-large">Start playing &raquo;</a></p>
 </div>
 <!--
