--- a/TowerSite/TowerSite/Views/Download/Index.cshtml
+++ b/TowerSite/TowerSite/Views/Download/Index.cshtml
@@ -3,6 +3,6 @@
     ViewBag.Title = "Download";
 }
 
-<h2>CSCI 4950 Project Downloads</h2><br />
+<h2>Tower Offense Downloads</h2><br />
 <h3>Play Test 2 - Version 0.2.3 - 3/29/14</h3>
 <p><a href="https://portalvhdspqj9kzn4lqvlp.blob.core.windows.net/game/4950-Project-0.2.3.zip" target="_blank" class="btn btn-primary btn-large">Download</a></p>
