--- a/TowerSite/TowerSite/Views/Home/Contact.cshtml
+++ b/TowerSite/TowerSite/Views/Home/Contact.cshtml
@@ -4,14 +4,14 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<address>
+<!--<address>
     One Microsoft Way<br />
     Redmond, WA 98052-6399<br />
     <abbr title="Phone">P:</abbr>
     425.555.0100
-</address>
+</address>-->
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Support:</strong>   <a href="mailto:4950CSCI@gmail.com">4950CSCI@gmail.com</a><br />
+    <strong>Bug Reports:</strong> <a href="https://github.com/4950/DirtyGame/issues">4950 Github</a>
 </address>
