SQL Fixes + game publish

--- a/TowerSite/TowerSite/Views/Download/Index.cshtml
+++ b/TowerSite/TowerSite/Views/Download/Index.cshtml
@@ -4,5 +4,5 @@
 }
 
 <h2>Tower Offense Downloads</h2><br />
-<h3>Play Test 2 - Version 0.2.3 - 3/29/14</h3>
-<p><a href="https://portalvhdspqj9kzn4lqvlp.blob.core.windows.net/game/4950-Project-0.2.3.zip" target="_blank" class="btn btn-primary btn-large">Download</a></p>
+<h3>Internal Beta - Version 0.3.0 - 4/17/14</h3>
+<p><a href="https://portalvhdspqj9kzn4lqvlp.blob.core.windows.net/game/Tower-Offense-0.3.0.zip" target="_blank" class="btn btn-primary btn-large">Download</a></p>
