Leaderboard shows top 100, paged, and allows search

--- a/TowerSite/TowerSite/Views/Leaderboard/Index.cshtml
+++ b/TowerSite/TowerSite/Views/Leaderboard/Index.cshtml
@@ -1,11 +1,21 @@
-﻿@model IEnumerable<TowerSite.Models.Leaderboard>
+﻿@model PagedList.IPagedList<TowerSite.Models.Leaderboard>
+@using PagedList;
+@using PagedList.Mvc;
+<link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
+
 
 @{
     ViewBag.Title = "Leaderboard";
 }
 
 <h2>Leaderboard</h2>
-
+@using (Html.BeginForm("Index", "Leaderboard", FormMethod.Get))
+{
+    <p>
+        Find by Username: @Html.TextBox("SearchString", ViewBag.CurrentFilter as string)
+        <input type="submit" value="Search" />
+    </p>
+} 
 <table class="table">
     <tr>
         <th>
@@ -15,10 +25,10 @@
             Name
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.ELO)
+            ELO
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.LinearELO)
+            LinearELO
         </th>
         <th></th>
     </tr>
@@ -42,3 +52,8 @@
     }
 
 </table>
+<br />
+Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+
+@Html.PagedListPager(Model, page => Url.Action("Index",
+    new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
