--- a/TowerSite/TowerSite/Views/Download/Index.cshtml
+++ b/TowerSite/TowerSite/Views/Download/Index.cshtml
@@ -5,4 +5,5 @@
 
 <h2>Tower Offense Downloads</h2><br />
 <h3>Public Release - Version 1.0.0 - 4/23/14</h3>
+<p><a href="http://portalvhdspqj9kzn4lqvlp.blob.core.windows.net/install-instructions/InstallationInstructions.pdf" target="_blank" class="btn btn-primary btn-large">Instructions</a></p>
 <p><a href="https://portalvhdspqj9kzn4lqvlp.blob.core.windows.net/game/TowerOffense-1.0.0.exe" target="_blank" class="btn btn-primary btn-large">Download</a></p>
