--- a/TowerSite/TowerSite/Views/Account/Login.cshtml
+++ b/TowerSite/TowerSite/Views/Account/Login.cshtml
@@ -12,6 +12,7 @@
             {
                 @Html.AntiForgeryToken()
                 <h4>Use a local account to log in.</h4>
+                <h4 style="color: #ff0000;">University of Minnesota Students: Use your X500 Google account</h4>
                 <hr />
                 @Html.ValidationSummary(true)
                 <div class="form-group">
